# Stoner-PythonCode

./: .bandit  .buildinfo  .codacy.yaml  .codeclimate.yml  .coveragerc  .gitattributes  .gitignore  .landscape.yml  .project  .prospector.yaml  .pydevproject  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .travis.yml  Doxyfile  MANIFEST.in  Makefile  README.md  README.rst  Stoner.Image.html  Stoner.gui.html  Stoner.html  StonerImage.html  analysis-fitting.html  classtest.py  genindex.html  index.html  objects.inv  params.json  prospector-report.txt  py-modindex.html  pyproject.toml  readme.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: Stoner.doctree  Stoner.gui.doctree  environment.pickle  index.doctree  readme.doctree
Stoner/: Analysis.py  Core.py  Core.py.backup  FileFormats.py  Fit.py  FittingFuncs.py  Folders.py  HDF5.py  Plot.py  PlotFormats.py  Util.py  ZIP.py  Zip.py  __init__.py  compat.py  mpfit.py  nlfit.py  plotutils.py  pyTDMS.py  tools.py
UserGuide/: analysisfile.html  cookbook.html  credits.html  curve_fitting.html  datafile.html  datafolder.html  developer.html  image.html  install.html  plotfile.html  ugindex.html  upgrade.html
_images/: inheritance-010b6e3ee1700812d16292642279fb0f92595d72.png.map  inheritance-076f48cf7c27b6b531853fd9f3b420fee7e470fc.png.map  inheritance-13041374ebb3cc7cb1e53decf1d858c9bfa0bb6f.png.map  inheritance-16db5e02564b78912187eb21211d46d826957170.png.map  inheritance-2573a3fbd875f897c720e8cf933c9f7ce560e8ee.png.map  inheritance-2cda0e63e0386206f25d1b368e973886f1546506.png.map  inheritance-2fc95526fc210e56fcd86563411f9b52fd30a546.png.map  inheritance-3276f02e6d0d34f674c6e742b5129e6b47c75cd9.png.map  inheritance-34bbfc5510f457c0c13e6c414db84c86f67f29a5.png.map  inheritance-44b8ab57dad209d2373b36726d186772f6b12b51.png.map  inheritance-51258d91f8da1171ee5936a39cb1d468c460dccb.png.map  inheritance-5a59a0163e90aa14b3e2c9c2f51b8a40bd587357.png.map  inheritance-73508161dbbf6c0732d1532f6550ce31353a1d6b.png.map  inheritance-74c1c13770cef0e1a512d9e01e25e7df4d5ffd35.png.map  inheritance-74f3afb26368ad56aa4159494b79bbdfba4c2f1c.png.map  inheritance-83434cf6db4f84da6791fecd9672794dce37de47.png.map  inheritance-8f642f192d3d42fb32beb82427a8f5d23b7032f1.png.map  inheritance-91a066c8f0ff77a9e217874244d149cd5da2d320.png.map  (+20 more)
_modules/: Stoner.html  (+4 more)
(+7764 files in other folders)
